Реализовано редактирование трекеров

--- a/Tracker/Tracker/Resources/Localizable.strings
+++ b/Tracker/Tracker/Resources/Localizable.strings
@@ -25,6 +25,7 @@
 "buttons.habit" = "Привычка";
 "buttons.event" = "Нерегулярное событие";
 "buttons.cancel" = "Отменить";
+"buttons.save" = "Cохранить";
 "buttons.create" = "Создать";
 "buttons.done" = "Готово";
 "buttons.addCategory" = "Добавить категорию";
